# app/Http/Controllers/Challenge/AnswersController.php
@@ -1,0 +1,362 @@
+<?php
+/**
+ * Created by PhpStorm.
+ * User: Daniel Reis
+ * Date: 3/17/2019
+ * Time: 3:52 AM
+ */
+
+namespace App\Http\Controllers\Challenge;
+
+
+use App\Entities\Lesson\Challenge\Answer;
+use App\Entities\Section\Section;
+use App\FieldManagers\Challenge\AnswersFieldManager;
+use App\Http\Controllers\ApiController;
+use Illuminate\Http\Request;
+
+class AnswersController extends ApiController
+{
+    public function __construct(Answer $model, AnswersFieldManager $fieldManager)
+    {
+        $this->model = $model;
+        $this->fieldManager = $fieldManager;
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/sections/{section_id}/lessons/{lesson_id}/challenges/{challenge_id}/answers",
+     *     summary="Lista todas as respostas do desafio",
+     *     operationId="GetChallengesAnswers",
+     *     tags={"challenges","answers"},
+     *     @OA\Parameter(
+     *         name="section_id",
+     *         in="path",
+     *         description="Id da sessão",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="lesson_id",
+     *         in="path",
+     *         description="Id da lição",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="challenge_id",
+     *         in="path",
+     *         description="Id do desafio",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="includes",
+     *         in="query",
+     *         description="Faz o include das relações",
+     *         required=false,
+     *         @OA\Schema(
+     *           type="array",
+     *           @OA\Items(type="string")
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="status",
+     *         in="query",
+     *         description="Nome do desafio",
+     *         required=false,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="...",
+     *     )
+     * )
+     */
+
+    public function getAnswers(Request $request, $section_id, $lesson_id, $challenge_id)
+    {
+        Section::findOrFail($section_id)
+            ->lessons()->findOrFail($lesson_id)
+            ->challenges()->findOrFail($challenge_id);
+
+        return parent::index($request); // TODO: Change the autogenerated stub
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/sections/{section_id}/lessons/{lesson_id}/challenges/{challenge_id}/answers",
+     *     summary="Lista todas as respostas do desafio",
+     *     operationId="StoreChallengesAnswers",
+     *     tags={"challenges","answers"},
+     *     @OA\Parameter(
+     *         name="section_id",
+     *         in="path",
+     *         description="Id da sessão",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="lesson_id",
+     *         in="path",
+     *         description="Id da lição",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="challenge_id",
+     *         in="path",
+     *         description="Id do desafio",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="description",
+     *         in="query",
+     *         description="Descrição da resposta",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="status",
+     *         in="query",
+     *         description="Se a resposta é verdadeira (apenas uma)",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=200,
+     *         description="...",
+     *     )
+     * )
+     */
+
+    public function postAnswer(Request $request, int $section_id, int $lesson_id, int $challenge_id)
+    {
+        Section::findOrFail($section_id)
+            ->lessons()->findOrFail($lesson_id)
+            ->challenges()->findOrFail($challenge_id);
+        $request->merge(['section_id' => $section_id]);
+        $request->merge(['lesson_id' => $lesson_id]);
+        $request->merge(['challenge_id' => $challenge_id]);
+
+        return parent::store($request); // TODO: Change the autogenerated stub
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/sections/{section_id}/lessons/{lesson_id}/challenges/{challenge_id}/answers/{answer_id}",
+     *     summary="Retorna uma resposta de um desafio",
+     *     operationId="GetChallengesAnswer",
+     *     tags={"challenges","answers"},
+     *     @OA\Parameter(
+     *         name="section_id",
+     *         in="path",
+     *         description="Id da sessão",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="lesson_id",
+     *         in="path",
+     *         description="Id da lição",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="challenge_id",
+     *         in="path",
+     *         description="Id do desafio",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="answer_id",
+     *         in="path",
+     *         description="Id do desafio",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=200,
+     *         description="...",
+     *     )
+     * )
+     */
+
+    public function getAnswer(Request $request, int $section_id, int $lesson_id, int $challenge_id, int $answer_id)
+    {
+        $request->merge(['section_id' => $section_id]);
+        $request->merge(['lesson_id' => $lesson_id]);
+        $request->merge(['challenge_id' => $challenge_id]);
+        Section::findOrFail($section_id)
+            ->lessons()->findOrFail($lesson_id)
+            ->challenges()->findOrFail($challenge_id)
+            ->answers()->findOrFail($answer_id);
+        return parent::show($answer_id); // TODO: Change the autogenerated stub
+    }
+
+    /**
+     * @OA\Put(
+     *     path="/sections/{section_id}/lessons/{lesson_id}/challenges/{challenge_id}/answers/{answer_id}",
+     *     summary="Lista todas as respostas do desafio",
+     *     operationId="StoreChallengesAnswers",
+     *     tags={"challenges","answers"},
+     *     @OA\Parameter(
+     *         name="section_id",
+     *         in="path",
+     *         description="Id da sessão",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="lesson_id",
+     *         in="path",
+     *         description="Id da lição",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="challenge_id",
+     *         in="path",
+     *         description="Id do desafio",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="answer_id",
+     *         in="path",
+     *         description="Id do desafio",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="description",
+     *         in="query",
+     *         description="Descrição da resposta",
+     *         required=false,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="status",
+     *         in="query",
+     *         description="Se a resposta é verdadeira (apenas uma)",
+     *         required=false,
+     *         @OA\Schema(
+     *           type="string",
+     *         )
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=200,
+     *         description="...",
+     *     )
+     * )
+     */
+
+    public function putAnswer(Request $request, int $section_id, int $lesson_id, int $challenge_id, int $answer_id)
+    {
+        Section::findOrFail($section_id)
+            ->lessons()->findOrFail($lesson_id)
+            ->challenges()->findOrFail($challenge_id)
+            ->answers()->findOrFail($answer_id);
+        $request->merge(['challenge_id' => $challenge_id]);
+        return parent::update($request, $answer_id); // TODO: Change the autogenerated stub
+    }
+
+    /**
+     * @OA\Delete(
+     *     path="/sections/{section_id}/lessons/{lesson_id}/challenges/{challenge_id}/answers/{answer_id}",
+     *     summary="Retorna uma resposta de um desafio",
+     *     operationId="DeleteChallengesAnswer",
+     *     tags={"challenges","answers"},
+     *     @OA\Parameter(
+     *         name="section_id",
+     *         in="path",
+     *         description="Id da sessão",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="lesson_id",
+     *         in="path",
+     *         description="Id da lição",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="challenge_id",
+     *         in="path",
+     *         description="Id do desafio",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="answer_id",
+     *         in="path",
+     *         description="Id do desafio",
+     *         required=true,
+     *         @OA\Schema(
+     *           type="integer",
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="...",
+     *     )
+     * )
+     */
+
+    public function deleteAnswer(int $section_id, int $lesson_id, int $challenge_id, int $answer_id)
+    {
+        Section::findOrFail($section_id)
+            ->lessons()->findOrFail($lesson_id)
+            ->challenges()->findOrFail($challenge_id)
+            ->answers()->findOrFail($answer_id);
+        return parent::destroy($answer_id); // TODO: Change the autogenerated stub
+    }
+}
